RESOLVED FIXED144411
Gracefully handle missing auto pause key on remote inspector setup
https://bugs.webkit.org/show_bug.cgi?id=144411
Summary Gracefully handle missing auto pause key on remote inspector setup
Joseph Pecoraro
Reported 2015-04-29 15:10:03 PDT
* SUMMARY Gracefully handle missing auto pause key on remote inspector setup. Treat WIRAutomaticallyPause as optional and ensure it is an NSNumber type before calling boolValue on it.
Attachments
[PATCH] Proposed Fix (1.83 KB, patch)
2015-04-29 15:11 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2015-04-29 15:11:21 PDT
Joseph Pecoraro
Comment 2 2015-04-29 15:11:50 PDT
Created attachment 251992 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 3 2015-04-29 16:47:34 PDT
Comment on attachment 251992 [details] [PATCH] Proposed Fix Clearing flags on attachment: 251992 Committed r183590: <http://trac.webkit.org/changeset/183590>
WebKit Commit Bot
Comment 4 2015-04-29 16:47:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.