Gracefully handle missing auto pause key on remote inspector setup https://bugs.webkit.org/show_bug.cgi?id=144411

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-04-29
Reviewed by Timothy Hatcher.

* inspector/remote/RemoteInspector.mm:
(Inspector::RemoteInspector::receivedSetupMessage):

Canonical link: https://commits.webkit.org/162430@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183590 268f45cc-cd09-0410-ab3c-d52691b4dbfc